--- a/CLIP_training.ipynb
+++ b/CLIP_training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMcTVfURUhtB2rC4IZGCztm",
+      "authorship_tag": "ABX9TyPTvWZl0so0+U3rFeIZ+eyN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -207,7 +207,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Restructure CSV for CLIP training"
+        "*Restructure CSV data for CLIP training* "
       ],
       "metadata": {
         "id": "gzti8qSR2DzE"
@@ -228,7 +228,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df['Caption'] = df['Caption'].str[:255] #truncate lyrics to make sure they aren't too long"
+        "df['Caption'] = df['Caption'].str[:255] #truncate lyrics to fit the character limit for CLIP"
       ],
       "metadata": {
         "id": "B4mmLWaex1FH",
@@ -236,9 +236,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 169
         },
-        "outputId": "a0fb5399-1020-4545-fad4-3c7d842429b8"
+        "outputId": "c2dab8f5-852b-4378-9ea9-6c127d312421",
+        "collapsed": true
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -247,7 +248,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-b824a39ab217>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Caption'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Caption'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#truncate lyrics to make sure they aren't too long\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-2-f7afbe86bc67>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Caption'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Caption'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#truncate lyrics to fit the character limit for CLIP\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
           ]
         }
@@ -256,7 +257,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df['Path'] = '/content/drive/MyDrive/ColabNotebooks/Images/' + df['Path'].astype(str) #add the path to the file name"
+        "df['Path'] = '/content/drive/MyDrive/ColabNotebooks/Images/' + df['Path'].astype(str) #add the path to the images"
       ],
       "metadata": {
         "id": "POMw1cuOJVvH"
@@ -267,7 +268,7 @@
     {
       "cell_type": "code",
       "source": [
-        "image_list = df.Drop.values.tolist() #create lists for training script\n",
+        "image_list = df.Drop.values.tolist() #convert data into lists\n",
         "caption_list = df.Caption.values.tolist()"
       ],
       "metadata": {
@@ -279,10 +280,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "Begin Training CLIP"
       ],
       "metadata": {
-        "id": "g1VQSXoe2kIi"
+        "id": "-vw0d6aJ4P0C"
       }
     },
     {
@@ -332,16 +333,17 @@
         "        p.data = p.data.float() \n",
         "        p.grad.data = p.grad.data.float() \n",
         "\n",
+        "\n",
         "if device == \"cpu\":\n",
         "  model.float()\n",
         "else :\n",
-        "  clip.model.convert_weights(model) # Actually this line is unnecessary since clip by default already on float16\n",
+        "  clip.model.convert_weights(model) \n",
         "\n",
         "loss_img = nn.CrossEntropyLoss()\n",
         "loss_txt = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(model.parameters(), lr=5e-5,betas=(0.9,0.98),eps=1e-6,weight_decay=0.2) #Params used from paper, the lr is smaller, more safe for fine tuning to new dataset\n",
         "\n",
-        "EPOCH = 10\n",
+        "EPOCH = 10 #can update your own EPOCHs\n",
         "\n",
         "# add your own code to track the training progress.\n",
         "for epoch in range(EPOCH):\n",
@@ -398,10 +400,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Save Model"
+        "Save the model"
       ],
       "metadata": {
-        "id": "11_eK_uF2ZEU"
+        "id": "3GR6u5dG4fq3"
       }
     },
     {
@@ -412,7 +414,7 @@
         "        'model_state_dict': model.state_dict(),\n",
         "        'optimizer_state_dict': optimizer.state_dict(),\n",
         "        'loss': total_loss,\n",
-        "        }, f\"/content/drive/MyDrive/ColabNotebooks/model_10.pt\") #can update with preferred folder / file name"
+        "        }, f\"/content/drive/MyDrive/ColabNotebooks/model_10.pt\") #just change to your preferred folder/filename"
       ],
       "metadata": {
         "id": "6qVhcOAOQaEM"
@@ -423,10 +425,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Reload Model"
+        "Load the model"
       ],
       "metadata": {
-        "id": "B0jwebRV2cNV"
+        "id": "DM5gj8Fk4hjR"
       }
     },
     {
