--- a/CLIP_training.ipynb
+++ b/CLIP_training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPTvWZl0so0+U3rFeIZ+eyN",
+      "authorship_tag": "ABX9TyPwlS2bBeXRkavSsQKJj5Oe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,18 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/tiffanymoran/AlbumGAN/blob/main/CLIP_training.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CLIP Training\n",
+        "\n",
+        "**Notes**\n",
+        "The code for this colab notebook is heavily modeled after vinson2233's code published as an [issue](https://github.com/openai/CLIP/issues/83) in the CLIP github repository and edited to train on the custom album art and song lyric dataset."
+      ],
+      "metadata": {
+        "id": "LSVMpVgB7mKj"
+      }
     },
     {
       "cell_type": "code",
@@ -236,8 +248,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 169
         },
-        "outputId": "c2dab8f5-852b-4378-9ea9-6c127d312421",
-        "collapsed": true
+        "outputId": "c2dab8f5-852b-4378-9ea9-6c127d312421"
       },
       "execution_count": null,
       "outputs": [
